// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Amy AI tutor screen > renders a QUIZ reply with options and grades the chosen answer > before-pick 1`] = `
<div
  data-colors="["#0b0b1a","#1a1633"]"
>
  <div>
    <button>
      <span
        data-icon="chevron-back"
        style="font-size: 22px; color: rgb(255, 255, 255);"
      />
    </button>
    <div
      data-colors="["#7B3FF2","#FF4ECD"]"
    >
      <span
        data-icon="brain"
        style="font-size: 18px; color: rgb(255, 255, 255);"
      />
    </div>
    <div>
      <div>
        <span>
          ai.page_title
        </span>
        <div>
          <span>
            ai.tutor_badge
          </span>
        </div>
      </div>
      <span>
        ai.tutor_subtitle
      </span>
    </div>
    <button
      aria-label="ai.clear_chat"
      role="button"
    >
      <span
        data-icon="refresh"
        style="font-size: 14px; color: rgba(255, 255, 255, 0.85);"
      />
      <span>
        ai.clear_chat
      </span>
    </button>
  </div>
  <div
    behavior="padding"
    keyboardverticaloffset="20"
  >
    <div>
      <div>
        <div>
          <button
            aria-label="ai.mode_teach · ai.mode_teach_hint"
            aria-selected="true"
            role="tab"
          >
            <span
              data-icon="school"
              style="font-size: 14px; color: rgb(255, 255, 255);"
            />
            <span>
              ai.mode_teach
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_practice · ai.mode_practice_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="checkbox-multiple-marked-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_practice
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_quiz · ai.mode_quiz_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="lightbulb-on-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_quiz
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_doubt · ai.mode_doubt_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="help-circle-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_doubt
            </span>
          </button>
        </div>
      </div>
      <span>
        ai.mode_teach_hint
      </span>
      <div>
        <button
          aria-selected="true"
          role="tab"
        >
          <span>
            ✨
          </span>
          <span>
            ai.subject_general
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🔢
          </span>
          <span>
            ai.subject_math
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            📖
          </span>
          <span>
            ai.subject_english
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🌍
          </span>
          <span>
            ai.subject_gk
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🧩
          </span>
          <span>
            ai.subject_logic
          </span>
        </button>
      </div>
      <input
        placeholder="ai.topic_placeholder"
        placeholdertextcolor="rgba(255,255,255,0.4)"
        value=""
      />
    </div>
    <div>
      <div>
        <div>
          <span>
            Quiz me on addition
          </span>
        </div>
      </div>
      <div>
        <div
          data-colors="["#7B3FF2","#FF4ECD"]"
        >
          <span
            data-icon="brain"
            style="font-size: 14px; color: rgb(255, 255, 255);"
          />
        </div>
        <div>
          <button
            aria-label="ai.listen"
            role="button"
          >
            <span
              data-icon="volume-medium-outline"
              style="font-size: 14px; color: rgba(167, 139, 250, 0.9);"
            />
            <span>
              ai.listen
            </span>
          </button>
          <div>
            <div>
              <span>
                Quick one!
              </span>
            </div>
          </div>
          <div>
            <span>
              What is 2 + 3?
            </span>
            <div>
              <button
                aria-disabled="false"
                aria-selected="false"
                role="button"
              >
                <span>
                  4
                </span>
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                role="button"
              >
                <span>
                  5
                </span>
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                role="button"
              >
                <span>
                  6
                </span>
              </button>
              <button
                aria-disabled="false"
                aria-selected="false"
                role="button"
              >
                <span>
                  7
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <input
        data-testid="amy-chat-input"
        placeholder="ai.tutor_placeholder_teach"
        placeholdertextcolor="rgba(255,255,255,0.4)"
        returnkeytype="send"
        value=""
      />
      <button
        disabled=""
      >
        <div
          data-colors="["#7B3FF2","#FF4ECD"]"
        >
          <span
            data-icon="arrow-up"
            style="font-size: 20px; color: rgb(255, 255, 255);"
          />
        </div>
      </button>
    </div>
    <span>
      ai.disclaimer
    </span>
  </div>
</div>
`;

exports[`Amy AI tutor screen > renders a structured TEACH reply with example chips 1`] = `
<div
  data-colors="["#0b0b1a","#1a1633"]"
>
  <div>
    <button>
      <span
        data-icon="chevron-back"
        style="font-size: 22px; color: rgb(255, 255, 255);"
      />
    </button>
    <div
      data-colors="["#7B3FF2","#FF4ECD"]"
    >
      <span
        data-icon="brain"
        style="font-size: 18px; color: rgb(255, 255, 255);"
      />
    </div>
    <div>
      <div>
        <span>
          ai.page_title
        </span>
        <div>
          <span>
            ai.tutor_badge
          </span>
        </div>
      </div>
      <span>
        ai.tutor_subtitle
      </span>
    </div>
    <button
      aria-label="ai.clear_chat"
      role="button"
    >
      <span
        data-icon="refresh"
        style="font-size: 14px; color: rgba(255, 255, 255, 0.85);"
      />
      <span>
        ai.clear_chat
      </span>
    </button>
  </div>
  <div
    behavior="padding"
    keyboardverticaloffset="20"
  >
    <div>
      <div>
        <div>
          <button
            aria-label="ai.mode_teach · ai.mode_teach_hint"
            aria-selected="true"
            role="tab"
          >
            <span
              data-icon="school"
              style="font-size: 14px; color: rgb(255, 255, 255);"
            />
            <span>
              ai.mode_teach
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_practice · ai.mode_practice_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="checkbox-multiple-marked-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_practice
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_quiz · ai.mode_quiz_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="lightbulb-on-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_quiz
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_doubt · ai.mode_doubt_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="help-circle-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_doubt
            </span>
          </button>
        </div>
      </div>
      <span>
        ai.mode_teach_hint
      </span>
      <div>
        <button
          aria-selected="true"
          role="tab"
        >
          <span>
            ✨
          </span>
          <span>
            ai.subject_general
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🔢
          </span>
          <span>
            ai.subject_math
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            📖
          </span>
          <span>
            ai.subject_english
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🌍
          </span>
          <span>
            ai.subject_gk
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🧩
          </span>
          <span>
            ai.subject_logic
          </span>
        </button>
      </div>
      <input
        placeholder="ai.topic_placeholder"
        placeholdertextcolor="rgba(255,255,255,0.4)"
        value=""
      />
    </div>
    <div>
      <div>
        <div>
          <span>
            Teach me the letter B
          </span>
        </div>
      </div>
      <div>
        <div
          data-colors="["#7B3FF2","#FF4ECD"]"
        >
          <span
            data-icon="brain"
            style="font-size: 14px; color: rgb(255, 255, 255);"
          />
        </div>
        <div>
          <button
            aria-label="ai.listen"
            role="button"
          >
            <span
              data-icon="volume-medium-outline"
              style="font-size: 14px; color: rgba(167, 139, 250, 0.9);"
            />
            <span>
              ai.listen
            </span>
          </button>
          <div>
            <div>
              <span>
                The letter B says 'buh'. Press your lips together!
              </span>
            </div>
          </div>
          <div>
            <div>
              <span>
                Ball
              </span>
            </div>
            <div>
              <span>
                Banana
              </span>
            </div>
            <div>
              <span>
                Bus
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <input
        data-testid="amy-chat-input"
        placeholder="ai.tutor_placeholder_teach"
        placeholdertextcolor="rgba(255,255,255,0.4)"
        returnkeytype="send"
        value=""
      />
      <button
        disabled=""
      >
        <div
          data-colors="["#7B3FF2","#FF4ECD"]"
        >
          <span
            data-icon="arrow-up"
            style="font-size: 20px; color: rgb(255, 255, 255);"
          />
        </div>
      </button>
    </div>
    <span>
      ai.disclaimer
    </span>
  </div>
</div>
`;

exports[`Amy AI tutor screen > renders mode strip + subject chips + empty state 1`] = `
<div
  data-colors="["#0b0b1a","#1a1633"]"
>
  <div>
    <button>
      <span
        data-icon="chevron-back"
        style="font-size: 22px; color: rgb(255, 255, 255);"
      />
    </button>
    <div
      data-colors="["#7B3FF2","#FF4ECD"]"
    >
      <span
        data-icon="brain"
        style="font-size: 18px; color: rgb(255, 255, 255);"
      />
    </div>
    <div>
      <div>
        <span>
          ai.page_title
        </span>
        <div>
          <span>
            ai.tutor_badge
          </span>
        </div>
      </div>
      <span>
        ai.tutor_subtitle
      </span>
    </div>
  </div>
  <div
    behavior="padding"
    keyboardverticaloffset="20"
  >
    <div>
      <div>
        <div>
          <button
            aria-label="ai.mode_teach · ai.mode_teach_hint"
            aria-selected="true"
            role="tab"
          >
            <span
              data-icon="school"
              style="font-size: 14px; color: rgb(255, 255, 255);"
            />
            <span>
              ai.mode_teach
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_practice · ai.mode_practice_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="checkbox-multiple-marked-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_practice
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_quiz · ai.mode_quiz_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="lightbulb-on-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_quiz
            </span>
          </button>
        </div>
        <div>
          <button
            aria-label="ai.mode_doubt · ai.mode_doubt_hint"
            aria-selected="false"
            role="tab"
          >
            <span
              data-icon="help-circle-outline"
              style="font-size: 14px; color: rgba(255, 255, 255, 0.75);"
            />
            <span>
              ai.mode_doubt
            </span>
          </button>
        </div>
      </div>
      <span>
        ai.mode_teach_hint
      </span>
      <div>
        <button
          aria-selected="true"
          role="tab"
        >
          <span>
            ✨
          </span>
          <span>
            ai.subject_general
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🔢
          </span>
          <span>
            ai.subject_math
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            📖
          </span>
          <span>
            ai.subject_english
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🌍
          </span>
          <span>
            ai.subject_gk
          </span>
        </button>
        <button
          aria-selected="false"
          role="tab"
        >
          <span>
            🧩
          </span>
          <span>
            ai.subject_logic
          </span>
        </button>
      </div>
      <input
        placeholder="ai.topic_placeholder"
        placeholdertextcolor="rgba(255,255,255,0.4)"
        value=""
      />
    </div>
    <div>
      <div>
        <div>
          <img
            resizemode="contain"
            src="/home/runner/workspace/artifacts/amynest-mobile/assets/images/mascot.png"
          />
        </div>
        <span>
          ai.tutor_empty_heading
        </span>
        <span>
          ai.tutor_empty_body
        </span>
        <div>
          <span>
            ai.popular_questions
          </span>
          <button>
            <span
              data-icon="school"
              style="font-size: 13px; color: rgba(167, 139, 250, 0.85);"
            />
            <span>
              ai.tutor_chip_teach_1
            </span>
          </button>
          <button>
            <span
              data-icon="school"
              style="font-size: 13px; color: rgba(167, 139, 250, 0.85);"
            />
            <span>
              ai.tutor_chip_teach_2
            </span>
          </button>
          <button>
            <span
              data-icon="school"
              style="font-size: 13px; color: rgba(167, 139, 250, 0.85);"
            />
            <span>
              ai.tutor_chip_teach_3
            </span>
          </button>
        </div>
      </div>
    </div>
    <div>
      <input
        data-testid="amy-chat-input"
        placeholder="ai.tutor_placeholder_teach"
        placeholdertextcolor="rgba(255,255,255,0.4)"
        returnkeytype="send"
        value=""
      />
      <button
        disabled=""
      >
        <div
          data-colors="["#7B3FF2","#FF4ECD"]"
        >
          <span
            data-icon="arrow-up"
            style="font-size: 20px; color: rgb(255, 255, 255);"
          />
        </div>
      </button>
    </div>
    <span>
      ai.disclaimer
    </span>
  </div>
</div>
`;
